--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <link rel="manifest" href="manifest.json">
     <link href='https://fonts.googleapis.com/css?family=Quicksand:300,400' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
+    <script src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script>
 </head>
 <body>
         <!-- Titulo -->
@@ -29,7 +29,7 @@
             <span id="salir-btn" class="fa fa-sign-out-alt out oculto animated fadeIn"></span>
             <span id="titulo">
                 <i class="fa fa-user"></i>
-                Seleccione Personaje
+                Seleccione Person
             </span>
             <span id="nuevo-btn" class="fa fa-pen-square new oculto animated fadeIn fast"></span>
         </span>
