--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span id="salir-btn" class="fa fa-sign-out-alt out oculto animated fadeIn"></span>
             <span id="titulo">
                 <i class="fa fa-user"></i>
-                Seleccione Person
+                Seleccione Personaje
             </span>
             <span id="nuevo-btn" class="fa fa-pen-square new oculto animated fadeIn fast"></span>
         </span>
