--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Para remover el notch de los iphones (height=device-height, viewport-fit=cover) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, viewport-fit=cover">
     <!-- <meta name="theme-color" content="#319197"> -->
     <!-- <meta name="theme-color" content="hsl(24.3, 97.4%, 54.3%)"> -->
     <!-- Las theme-color etiquetas meta admiten colores CSS en cualquier forma: palabras clave rgb(), hsl()o código hexadecimal. -->
