Eliminar recursos de bloqueo de renderizado con async

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <!-- si especifica ambos, async tiene prioridad en los navegadores modernos, mientras que los navegadores más antiguos que son compatibles defer pero no async lo harán como respaldo defer. -->
 
-    <!-- <script async src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script>
-    <script defer src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script> -->
+    <script async src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script>
+    <!-- <script defer src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script> -->
 
     <!-- Lo mejor que puede hacer para acelerar la carga de su página cuando usa scripts es ponerlos en el heady agregar un deferatributo a su scriptetiqueta: -->
-    <script defer src="script.js"></script>
+    <!-- <script defer src="script.js"></script> -->
 </head>
 <body>
         <!-- Titulo -->
