--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) --> 
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-750x1334.png">
     
+
+    <!--! GOOGLE DEVELOPERS RECOMIENDA QUE TU ESTILO QUE MAS CRITICO TENGA LO PONGAS DENTRO DE LA TARGETA STYLE Y LO QUE TENGAN MAS NO CRITICO VAYA CON EL FORMATO DE ABAJO -->
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Quicksand:300,400" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400"></noscript>
 
@@ -59,19 +61,19 @@
     <link rel="preload" href="css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/animate.css"></noscript>
     
-    <!-- No poner esto aquí, es una cagada para el rendimiento de la página, xq te va a leer todo esto y recién pasa a leer el html de abajo -->
+    <!--! No poner esto aquí, es una cagada para el rendimiento de la página, xq te va a leer todo esto y recién pasa a leer el html de abajo -->
     <!-- <script src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script> -->
 
-    <!-- El atributo async booleano en los elementos del script permite que el archivo JavaScript externo se ejecute cuando esté disponible, sin demorar la carga de la página primero. -->
+    <!--! El atributo async booleano en los elementos del script permite que el archivo JavaScript externo se ejecute cuando esté disponible, sin demorar la carga de la página primero. -->
 
-    <!-- El atributo defer booleano en los elementos del script permite que el archivo JavaScript externo se ejecute cuando se carga el DOM, sin retrasar la carga de la página primero. -->
+    <!--! El atributo defer booleano en los elementos del script permite que el archivo JavaScript externo se ejecute cuando se carga el DOM, sin retrasar la carga de la página primero. -->
 
-    <!-- si especifica ambos, async tiene prioridad en los navegadores modernos, mientras que los navegadores más antiguos que son compatibles defer pero no async lo harán como respaldo defer. -->
+    <!--! si especifica ambos, async tiene prioridad en los navegadores modernos, mientras que los navegadores más antiguos que son compatibles defer pero no async lo harán como respaldo defer. -->
 
     <script async src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script>
     <script defer src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script>
 
-    <!-- Lo mejor que puede hacer para acelerar la carga de su página cuando usa scripts es ponerlos en el heady agregar un deferatributo a su scriptetiqueta: -->
+    <!--! Lo mejor que puede hacer para acelerar la carga de su página cuando usa scripts es ponerlos en el heady agregar un deferatributo a su scriptetiqueta: -->
     <!-- <script defer src="script.js"></script> -->
 </head>
 <body>
@@ -171,7 +173,7 @@
 
         <button type="button" id="install-btn" class="button">Instalar</button>
 
-        <!-- Esto es lo mejor que puede hacer si necesita admitir navegadores más antiguos que no admiten dos características relativamente recientes de HTML: async y defer -->
+        <!--! Esto es lo mejor que puede hacer si necesita admitir navegadores más antiguos que no admiten dos características relativamente recientes de HTML: async y defer -->
         <!-- <script src="https://kit.fontawesome.com/c3e2e9d902.js"c crossorigin="anonymous"></script> -->
         <script src="js/libs/jquery.js"></script>
         <script src="js/app.js"></script>
